[tool.poetry]
name = "python-fastapi-release"
version = "0.1.0"
description = ""
authors = ["algakz06 <77662392+algakz06@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
pydantic = "^2.8.2"
uvicorn = "^0.30.3"
sqlalchemy = "^2.0.31"
psycopg2-binary = "^2.9.9"
loguru = "^0.7.2"
python-dotenv = "^1.0.1"
pydantic-settings = "^2.4.0"

[tool.pyright]
venvPath = "/Users/kimdaniil/Library/Caches/pypoetry/virtualenvs"
venv = "python-fastapi-release-mhYJDOzR-py3.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
